Scrollbar issue resolved as per requested changes

--- a/app/app.component.css
+++ b/app/app.component.css
@@ -105,7 +105,7 @@ md-sidenav {
   width: 220px;
   margin-top: 64px;
   font-weight: bold;
-  overflow-y: auto;
+  height: auto;
 }
 
 md-sidenav a {
@@ -117,7 +117,6 @@ md-sidenav-container {
   z-index: 10;
   display: block;
   overflow-x: hidden;
-  overflow-y: auto;
   padding-top: 64px;
   position: relative;
 }
@@ -127,7 +126,7 @@ md-sidenav-container {
 }
 
 .wrapper {
-  min-height: 96%;
+  min-height: 100%;
   height: auto;
   margin: 0 auto -50px;
 }
